--- a/Mobile_price_range_Prediction.ipynb
+++ b/Mobile_price_range_Prediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNulcJILx1/8+ukIizeEGu/",
+      "authorship_tag": "ABX9TyOlSv9dcseBlZpn2yi/QCP7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -143,7 +143,9 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "https://github.com/Nik852001/Classification_Capstone_Project"
+      ],
       "metadata": {
         "id": "TOxbAZhxXBtH"
       }
